# coherent_summation_module

./: .gitignore  README.md
src/: CMakeLists.txt  CoherentSummation.cpp  CoherentSummation.h  CoherentSummationANN.cpp  CoherentSummationANN.h  CoherentSummationTable.cpp  CoherentSummationTable.h  CoherentSummationTableArray.cpp  CoherentSummationTableArray.h  CoherentSummationTableFile.cpp  CoherentSummationTableFile.h  module.cpp  setup.py
src/CoherentSummation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/coherent_summation_impl/: array1D.h  array2D.h
src/coherent_summation_impl/emission_tomography/: amplitudes_calculator_base.h  amplitudes_calculator_m128.h  amplitudes_calculator_m256.h  amplitudes_calculator_m512.h  emission_tomography_method.h
src/coherent_summation_impl/kirchhoff_migration/: kirchhoff_migration.h  kirchhoff_migration_by_points_impl.h
src/coherent_summation_interface/: microseismic_monitoring.py
src/coherent_summation_module/: CMakeLists.txt  CoherentSummation.h  CoherentSummationANN.cpp  CoherentSummationTable.h  module.cpp
src/coherent_summation_module/coherent_summation_impl/emission_tomography/: amplitudes_calculator_base.h  amplitudes_calculator_m128.h  amplitudes_calculator_m256.h  amplitudes_calculator_m512.h  amplitudes_calculator_non_vectors.h  emission_tomography_method.h  minmax_t_to_source.h
src/coherent_summation_module/coherent_summation_impl/kirchhoff_migration/: avx2_functions_impl.h  avx512_functions_impl.h  kirchhoff_migration_by_points_impl.h  simd_functions.h  sse4_functions_impl.h
src/coherent_summation_module/time_arrival/: CMakeLists.txt  TimeArrivalTimesTable.h  TimeArrivalTimesTableArray.h  TimeArrivalTimesTableFile.h  TimeArrivalWrapperNN.cpp
src/coherent_summation_module/time_arrival/time_arrival_NN/: CMakeLists.txt  TimeArrivalNNBase.h  TimeArrivalNNException.cpp  TimeArrivalNNModel.cpp  TimeArrivalNNModel.h
src/coherent_summation_module/time_arrival/time_arrival_table_file/: CMakeLists.txt
src/coherent_summation_module/utils/: CMakeLists.txt  array1D.h  array2D.h  py_common.h  utils.h
src/emission_tomography/: amplitudes_calculator_base.h  amplitudes_calculator_m128.h  amplitudes_calculator_m256.h  amplitudes_calculator_m512.h  amplitudes_calculator_non_vectors.h  emission_tomography_method.h
src/time_arrival/: CMakeLists.txt  TimeArrivalBase.cpp  TimeArrivalBase.h  TimeArrivalTimesTable.cpp  TimeArrivalTimesTable.h  TimeArrivalTimesTableArray.cpp  TimeArrivalTimesTableArray.h  TimeArrivalTimesTableFile.cpp  TimeArrivalTimesTableFile.h  TimeArrivalWrapperNN.cpp  TimeArrivalWrapperNN.h
src/time_arrival/time_arrival_NN/: CMakeLists.txt  TimeArrivalNNBase.cpp  TimeArrivalNNException.cpp  TimeArrivalNNException.h  TimeArrivalNNFrozen.cpp  TimeArrivalNNFrozen.h  TimeArrivalNNModel.cpp
src/time_arrival/time_arrival_NN/tensorflow/: FindTensorFlow.cmake
src/time_arrival/time_arrival_table_file/: CMakeLists.txt
src/utils/: CMakeLists.txt  array2D.h  py_common.h  utils.cpp  utils.h
tests/: CMakeLists.txt
tests/emmision_tomography/: CMakeLists.txt
tests/emmision_tomography/parallel/: CMakeLists.txt
tests/emmision_tomography/parallel/by_receivers_test/: CMakeLists.txt  measurementsAVX2.csv  measurementsNO_SIMD_EXTENSIONS.csv  run_test.sh  test.cpp  test_no_vect.cpp  test_vect.cpp
tests/emmision_tomography/parallel/by_samples_test/: CMakeLists.txt  measurementsAVX2.csv  measurementsSSE2.csv  run_test.sh  test.cpp  test_no_vect.cpp  test_vect.cpp
tests/emmision_tomography/parallel/by_sources_samples_test/: CMakeLists.txt  measurementsNO_SIMD_EXTENSIONS.csv  schedule_test.sh  test.cpp  test_no_vect.cpp  test_vect.cpp
tests/emmision_tomography/parallel/by_sources_test/: CMakeLists.txt  measurementsAVX2.csv  run_test.sh  test.cpp  test_no_vect.cpp  test_vect.cpp
tests/emmision_tomography/prof/: CMakeLists.txt
tests/emmision_tomography/prof/native/: test_native.cpp
tests/emmision_tomography/prof/reverse_cycles/: test_reverse.cpp
tests/emmision_tomography/serial/blocks_test/: CMakeLists.txt  measurements.csv  measurements1.csv  measurements2.csv  measurements3.csv  optimization_report.txt  test.cpp
tests/emmision_tomography/serial/cycles_test/: CMakeLists.txt  measurements.csv  optimization_report.txt  test.cpp
tests/emmision_tomography/serial/vectorized_test/: CMakeLists.txt  measurementsAVX2.csv  measurementsNO_SIMD_EXTENSIONS.csv  measurementsSSE2.csv  run_test.sh  test_no_vect.cpp  test_vect.cpp
tests/kirchhoff_migration/: CMakeLists.txt
tests/kirchhoff_migration/parallel/: CMakeLists.txt
tests/kirchhoff_migration/parallel/by_blocks/: CMakeLists.txt  test2D.cpp  test3D.cpp
tests/kirchhoff_migration/parallel/by_points_with_blocks/: CMakeLists.txt  test2D.cpp  test3D.cpp
tests/kirchhoff_migration/parallel/by_points_without_blocks/: CMakeLists.txt  test2D.cpp  test3D.cpp
tests/kirchhoff_migration/parallel/native/: CMakeLists.txt  measurements2D_AVX512F.csv  test2D.cpp  test3D.cpp
tests/kirchhoff_migration/parallel/native_blocks/: CMakeLists.txt  test2D.cpp  test3D.cpp
tests/kirchhoff_migration/prof/: CMakeLists.txt
tests/kirchhoff_migration/prof/blocks_inner_receivers/: test_blocks_inner_receivers.cpp
tests/kirchhoff_migration/prof/blocks_serial/: test_blocks_serial.cpp
tests/kirchhoff_migration/prof/native/: test_native.cpp
tests/kirchhoff_migration/prof/optimal_parallel/: test_optimal_parallel.cpp
tests/kirchhoff_migration/prof/optimal_serial/: test_optimal_serial.cpp
tests/kirchhoff_migration/prof/reverse_cycles/: test_reverse_cycles.cpp
tests/kirchhoff_migration/prof/strip_mining/: test_strip_mining.cpp
tests/kirchhoff_migration/serial/: CMakeLists.txt
tests/perfomance/kirchhoff_migration/: CMakeLists.txt
tests/perfomance/utils/: CMakeLists.txt  test_data_generator.h  test_data_generator2D.h
tests/synthetic/microseismic/: eventsSergey2_true.xlsx  recs_patch.npy  recs_rays.npy  synthetic_generator.ipynb  velocity.npy
tests/utils/: CMakeLists.txt  perf_wrapper.h  test_data_generator2D.h  test_data_generator3D.h
(+304 files in other folders)
